Revision history for Catmandu-OAI

0.0?    2014-??-??
  - new option: dry (as supported my Catmandu::Importer::getJSON)

0.02    2013-03-11
  - pluggable record handlers
  - support set, metadataPrefix, from, until
  - more tolerant of bad xml

0.01    2012-05-04
  - initial release
