@@ -2,6 +2,7 @@ Revision history for Catmandu-OAI
 
 0.0?    2014-??-??
   - new option: dry (as supported my Catmandu::Importer::getJSON)
+  - new option: listIdentifiers
 
 0.02    2013-03-11
   - pluggable record handlers
